# Ferrox

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  limitation-impl.md
.github/workflows/: ci.yml
ai/: Cargo.toml
ai/src/: lib.rs
apps/: README.md
apps/android/: .gitignore  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/io/ferrox/photoeditor/: MainActivity.kt
apps/android/app/src/main/res/layout/: activity_main.xml
apps/android/app/src/main/res/values/: strings.xml
apps/ios/: .gitignore  project.yml
apps/ios/FerroxPhotoEditor/: ContentView.swift  FerroxPhotoEditorApp.swift
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/benches/: cache.rs  plugin_registry.rs
core/examples/: plugins.rs
core/src/: anim.rs  audio.rs  blend.rs  bus.rs  color.rs  compositor.rs  demux_graph.rs  error.rs  event.rs  filter_graph.rs  formats.rs  frame.rs  gpu.rs  graph.rs  hls.rs  keyer.rs  lib.rs  mask.rs  media.rs  registry.rs  simd_ops.rs  timeline.rs  traits.rs  transcode_graph.rs  transitions.rs  video.rs  wasm.rs
core/src/anim/: group.rs  mod.rs
core/src/asset/: generate.rs  graph.rs  manager.rs  mod.rs
core/src/audio/: effects.rs  mixer.rs  mod.rs  waveform.rs
core/src/audio/effects/: biquad.rs  dsp.rs  dynamics.rs  effect.rs  filters.rs  mod.rs  spatial.rs
core/src/cache/: lru.rs  mod.rs  resource.rs  shared.rs
core/src/codecs/: gif.rs  jpeg.rs  mod.rs  png.rs
core/src/codecs/audio/: flac.rs  mod.rs  mp3.rs  mp3_enc.rs  opus_enc.rs  vorbis.rs  wav.rs
core/src/codecs/video/: av1_enc.rs  fmp4_mux.rs  h264.rs  ivf_demux.rs  mod.rs  mp4_demux.rs  mp4_mux.rs  mpegts_mux.rs  vp8.rs  vp9.rs  webm_demux.rs  webm_mux.rs
core/src/codecs/video/fmp4_mux/: boxes.rs  fragments.rs  mod.rs
core/src/codecs/video/mpegts_mux/: mod.rs  ts.rs
core/src/demux_graph/: audio_extract.rs  convert.rs  mod.rs
core/src/filters/: drawtext.rs  mod.rs  pixel.rs  resample.rs  resize.rs  video_filters.rs  volume.rs
core/src/font/: manager.rs  mod.rs
core/src/gpu/: kernels.rs  mod.rs  shaders.rs
core/src/hls/: mod.rs  segmenter.rs
core/src/playback/: controller.rs  mod.rs  transport.rs
core/src/plugin/: abi.rs  builtin.rs  capability.rs  dynamic.rs  error.rs  kind.rs  lifecycle.rs  manager.rs  metadata.rs  mod.rs  registry.rs  traits.rs
core/src/render/: backend.rs  cpu.rs  gpu.rs  graph.rs  mod.rs  nodes.rs  preview.rs
core/src/storage/: diff.rs  format.rs  migration.rs  mod.rs  snapshot.rs
core/src/subtitle/: mod.rs  model.rs  parse.rs  render.rs
core/src/task/: control.rs  handle.rs  manager.rs  mod.rs
core/src/timeline/: audio.rs  clip.rs  mod.rs  project.rs  source.rs  transform.rs
core/src/vector/: mod.rs  svg.rs
core/tests/: animation.rs  asset.rs  audio_encode.rs  audio_mixer.rs  audio_pipeline.rs  blend_modes.rs  cache.rs  color_grading.rs  dynamic_plugin_e2e.rs  filters_phase4.rs  font.rs  hls_phase9_test.rs  hls_test.rs  keyframe_anim.rs  mask_keyer.rs  muxer_test.rs  phase11_test.rs  pipeline.rs  playback.rs  plugin.rs  preview_export.rs  render_backend.rs  render_graph.rs  storage.rs  subtitle.rs  task.rs  timeline_compositor.rs  transcode_pipeline.rs  transitions.rs  vector_svg.rs  video_pipeline.rs  wasm_api_test.rs
docs/: ffmpeg-migration.md  filters.md  limitations.md  milestone-prompts.md  mobile.md  roadmap-video-editor.md  sdk-architecture-plan.md
examples/dynamic_plugin/: Cargo.toml
examples/dynamic_plugin/src/: lib.rs
fuzz/: Cargo.toml
fuzz/src/: fuzz_m3u8_parser.rs  fuzz_mp3_decoder.rs  fuzz_mp4_demuxer.rs  fuzz_png_decoder.rs
mobile/: Cargo.toml  build.rs  uniffi.toml
mobile/src/: functions.rs  lib.rs  session.rs
scripts/: build-android.sh  build-ios.sh  build-web.sh  sync-android-sdk.sh  sync-ios-sdk.sh
sdk/: Cargo.toml
sdk/benches/: editor_render.rs
sdk/examples/: edit_and_render.rs
sdk/src/: commands.rs  editor.rs  error.rs  export.rs  lib.rs  project_io.rs
sdk/tests/: editor_state.rs  events.rs  export_mp4.rs
service/: Cargo.toml
service/src/: handlers.rs  main.rs  models.rs
web/: Cargo.toml  README.md
web/src/: lib.rs
