[package]
name = "ferrox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferrox"
path = "src/main.rs"

[dependencies]
ferrox-core = { path = "../core", features = ["encode"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
