[package]
name = "ferrox-core"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
thiserror = "2"
tracing = "0.1"
hound = "3"
minimp3 = "0.5"
claxon = "0.4"
lewton = "0.10"
rubato = "0.15"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tempfile = "3"
hound = "3"
