[package]
name = "ferrox-mobile"
version = "0.1.0"
edition = "2021"
description = "Native Android (Kotlin) + iOS (Swift) SDK bindings for ferrox, generated with UniFFI."

[lib]
name = "ferrox_mobile"
# staticlib  → iOS .a inside the XCFramework
# cdylib     → Android .so loaded via JNI / System.loadLibrary
# rlib       → keeps it usable from other Rust crates / uniffi-bindgen
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Mobile-safe feature set: pure-Rust decode/filters/demux/gif only.
# `default-features = false` drops `encode` (rav1e uses NASM/assembly and does
# not cross-compile cleanly to android/ios). Add features here later if needed.
ferrox-core = { path = "../core", default-features = false, features = [
    "image-codecs",
    "audio-codecs",
    "video-codecs",
    "filters-extra",
    "gif-support",
] }
uniffi = { version = "0.28", features = ["cli"] }
thiserror = "2"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

# Standalone binary used to generate the Kotlin/Swift bindings from the built
# library:  cargo run --bin uniffi-bindgen -- generate ...
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
