[package]
name = "ferrox-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferrox-service"
path = "src/main.rs"

[dependencies]
ferrox-core = { path = "../core", features = ["encode"] }
axum = { version = "0.7", features = ["multipart"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["limit", "buffer"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
