[package]
name = "ferrox-web"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WebAssembly bindings for the ferrox editing SDK"

[lib]
# cdylib for the wasm artifact; rlib so it can also be built/checked natively.
crate-type = ["cdylib", "rlib"]

[dependencies]
# The SDK without its native-only `export` feature (rav1e) — WASM-safe.
ferrox-sdk = { path = "../sdk", default-features = false }
wasm-bindgen = "0.2"
serde_json = "1"

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[features]
default = ["console_error_panic_hook"]
